sfdx-source/force-app/main/default/objects/Integration_Template__c/Integration_Template__c.object-meta.xml
<CustomObject>
    <description>LEM-13777: It stores the record evaluation criteria for each integration specific scenarios based on sObject types.</description>
    <label>Integration Template</label>
    <nameField>
        <label>Integration Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>