sfdx-source/force-app/main/default/objects/Integration_Template__c/fields/Immediate_Communication__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Communication__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-13777: It indicates whether the Email communication needs to be sent immediately.</description>
    <label>Immediate Communication</label>
    <type>Checkbox</type>
</CustomField>