sfdx-source/force-app/main/default/objects/Integration_Template__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-13777: It indicates whether the record evaluation needs to be performed for specific integration scenario.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>