sfdx-source/force-app/main/default/objects/Integration_Template__c/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13777: It stores the sObject type specific to integration scenario.</description>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>